# SInC

./: .gitignore  README.md  pom.xml
c++/: CMakeLists.txt  README.md  main.cpp  test_sinc.cpp
c++/src/base/: CMakeLists.txt  sinc.cpp  sinc.h
c++/src/exp/: intTableFactors.cpp  measureCbMem.cpp  measureEvalMem.cpp
c++/src/impl/: CMakeLists.txt  app.cpp  app.h  cachedSinc.cpp  cachedSinc.h  sincWithCache.cpp  sincWithCache.h  sincWithEstimation.cpp  sincWithEstimation.h
c++/src/kb/: CMakeLists.txt  intTable.cpp  intTable.h  simpleKb.cpp  simpleKb.h
c++/src/rule/: CMakeLists.txt  components.cpp  components.h  rule.cpp  rule.h
c++/src/util/: CMakeLists.txt  common.cpp  common.h  graphAlg.cpp  graphAlg.h  util.cpp  util.h
c++/test/base/: sinc_test.cpp
c++/test/impl/: app_test.cpp  cached_sinc_test.cpp  sincWithCache_test.cpp  sincWithEstimation_test.cpp
c++/test/kb/: intTable_test.cpp  simpleKb_test.cpp  testKbUtils.cpp  testKbUtils.h
c++/test/rule/: components_test.cpp  rule_test.cpp
c++/test/util/: common_test.cpp  graphAlg_test.cpp  util_test.cpp
src/main/java/sinc2/: Main.java  PerformanceMonitor.java  RelationMiner.java  SInC.java  SincConfig.java
src/main/java/sinc2/common/: DebugLevel.java
src/main/java/sinc2/exp/: ConstructHPKB.java  RuleSpecializationChecker.java  TestSpecWn.java
src/main/java/sinc2/exp/est/: AssumptionValidation.java  EstimationRanking.java  RankingQuality.java
src/main/java/sinc2/exp/hint/: Hint.java  Hinter.java  HinterMultiThread.java  HinterRule.java
src/main/java/sinc2/exp/negsample/: GenDiffIntMapping.java  TestConstantRelevance.java  TestSampleDistribution.java
src/main/java/sinc2/exp/sampling/: TestSincOnSampledFm.java
src/main/java/sinc2/impl/base/: CachedRule.java  CompliedBlock.java  SincBasic.java
src/main/java/sinc2/impl/est/: BodyVarLinkManager.java  EstRelationMiner.java  EstRule.java  EstSinc.java  FragmentedEstRelationMiner.java  FragmentedEstRule.java  FragmentedEstSinc.java  LinkTreeNode.java  RandEstRelationMiner.java  RandEstRule.java  RandEstSinc.java  SpecOprWithScore.java  VarLink.java  VarPair.java
src/main/java/sinc2/impl/negsamp/: AdvNegCachedRule.java  AdvNegRelationMiner.java  CB.java  CacheFragment.java  CachedSincPerfMonitor.java  FragmentedCachedRule.java  NegSampleCachedRule.java  NegSampleRelationMiner.java  NegSamplingMonitor.java  RelationMinerWithFragmentedCachedRule.java  SincWithAdvNegSampling.java  SincWithFragmentedCachedRule.java  SincWithNegSampling.java
src/main/java/sinc2/kb/: AdversarialSampledResult.java  CacheFragArgLoc.java  IntTable.java  NegSampleKb.java  NegSampler.java  SimpleKb.java  SimpleRelation.java  SplitRecords.java  gen_neg_con_rel.py
src/main/java/sinc2/rule/: BareRule.java  Eval.java  Fingerprint.java  Rule.java  SpecOprCase1.java  SpecOprCase2.java  SpecOprCase3.java  SpecOprCase4.java  SpecOprCase5.java
src/main/java/sinc2/util/: ArrayOperation.java  MultiSet.java
src/main/java/sinc2/util/datagen/: CodexExtractor.java  FunctionalityGenerator.java  RandomGenerator.java  TsvDumper.java  TsvExtractor.java
src/main/java/sinc2/util/kb/: ConstRemap.java  DBpediaExtractor.java  DBpediaSimplifier.java  FormatConverter.java  YagoExtractor.java
src/test/java/sinc2/impl/base/: CachedRuleTest.java  SincBasicTest.java
src/test/java/sinc2/impl/est/: BodyVarLinkManagerTest.java  EstRuleTest.java  EstSincTest.java
src/test/java/sinc2/kb/: IntTableTest.java  NegSampleKbTest.java  NegSamplerTest.java  SimpleRelationTest.java
src/test/java/sinc2/rule/: FingerprintTest.java  RuleTest.java
src/test/java/sinc2/util/: ArrayOperationTest.java
(+9 files in other folders)
